frontend/k8s.sample/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-frontend
  namespace: wedding-frontend
spec:
  selector:
    app: wedding-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
